# nfl-predictions-2025

./: .gitignore  betfair_odds.py  main.py  nfl_predictions_streamlit.py  predictions.csv  predictions_2024.csv  pyproject.toml  requirements.txt  selections.csv
categories/: afc_winner.csv  dpoy.csv  mvp.csv  nfc_winner.csv  oroy.csv  playoff_dark_horse.csv  playoff_miss.csv  superbowl_winner.csv  worst_record.csv
