[tool.poetry]
name = "nfl-predictions-2025"
version = "0.1.0"
description = "NFL 2025 season predictions dashboard with Streamlit"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
numpy = "^2.3.2"
streamlit = "^1.47.1"
altair = "^5.5.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nfl-app = "streamlit run main.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
